# llvm-12-exercise

./: .gitignore
Chapter05/tinylang/include/tinylang/AST/: AST.h
Chapter05/tinylang/include/tinylang/CodeGen/: CGModule.h  CGProcedure.h
Chapter05/tinylang/lib/CodeGen/: CGModule.cpp  CGProcedure.cpp
chapter02/tinylang/tools/driver/: Driver.cpp
chapter03/calc/: CMakeLists.txt  rtcalc.c
chapter03/calc/src/: AST.h  CMakeLists.txt  Calc.cpp  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Sema.cpp  Sema.h
chapter04/tinylang/: CMakeLists.txt
chapter04/tinylang/cmake/modules/: AddTinylang.cmake
chapter04/tinylang/include/tinylang/Basic/: Diagnostic.def  Diagnostic.h  TokenKinds.h  Version.h
chapter04/tinylang/lib/Basic/: CMakeLists.txt  Diagnostic.cpp  TokenKinds.cpp
chapter04/tinylang/tools/driver/: CMakeLists.txt
